openshift-descriptors-https-letsencrypt-failing.yaml
apiVersion: v1
kind: Service
metadata:
  name: gollum-galore
  labels:
    name: gollum-galore
spec:
  ports:
  - name: http
    port: 80
  - name: https
    port: 443
  selector:
    app: gollum-galore
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: gollum-galore
spec:
  serviceName: gollum-galore
  replicas: 1
  template:
    metadata:
      labels:
        app: gollum-galore
    spec:
      containers:
      - name: gollum-galore
        image: schnatterer/gollum-galore:0.1-traefik
        ports:
        - containerPort: 80
        - containerPort: 443
        volumeMounts:
        - name: wiki
          mountPath: /gollum/wiki
        - name: config
          mountPath: /gollum/config
        resources:
          requests:
            memory: 512M
        # TODO readiness & liveness probe
      volumes:
      - name: wiki
        persistentVolumeClaim:
          claimName: gollum-gallore-persistent-storage-claim
      - name: config
        configMap:
            name: traefik
---
# Creates the following route: <route-name>[-<namespace>].<suffix>
# You can query it like so: oc get route gollum-galore-generated
# Create a CNAME record and point it to the URL created by this route
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gollum-galore-generated
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: gollum-galore
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gollum-galore
spec:
  # Insert your hostname here
  host: yourdomain.com
  port:
    targetPort: https
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: passthrough
  to:
    kind: Service
    name: gollum-galore
