openshift-descriptors-https-own-cert.yaml
apiVersion: v1
kind: Service
metadata:
  name: gollum-galore
  labels:
    name: gollum-galore
spec:
  ports:
  - name: http
    port: 80
  - name: https
    port: 443
  selector:
    app: gollum-galore
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: gollum-galore
spec:
  serviceName: gollum-galore
  replicas: 1
  template:
    metadata:
      labels:
        app: gollum-galore
    spec:
      containers:
      - name: gollum-galore
        image: schnatterer/gollum-galore:0.3.2
        ports:
        - containerPort: 80
        - containerPort: 443
        volumeMounts:
        - name: gollum
          mountPath: /gollum
        - name: config
          mountPath: /gollum/config
        resources:
          requests:
            memory: 512M
        readinessProbe:
          # don't use http here, because all our resources are protected
          tcpSocket:
            port: 443
          # Wait for volume to get bound
          initialDelaySeconds: 20
          periodSeconds: 1
        livenessProbe:
          tcpSocket:
            port: 443
          initialDelaySeconds: 120
          periodSeconds: 10
      - name: gollum
        persistentVolumeClaim:
          claimName: gollum-gallore-persistent-storage-claim
      - name: config
        projected:
          sources:
          - secret:
              name: credentials
              items:
                - key: htpasswd
                  path: .htpasswd
          - configMap:
              name: caddyfile
              items:
                - key: Caddyfile
                  path: Caddyfile
---
# Creates the following route: <route-name>[-<namespace>].<suffix>
# You can query it like so: oc get route gollum-galore-generated
# Create a CNAME record and point it to the URL created by this route
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gollum-galore-generated
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: gollum-galore
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gollum-galore
spec:
  # Insert your hostname here
  host: yourdomain.com
  port:
    targetPort: https
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: passthrough
  to:
    kind: Service
    name: gollum-galore
