openshift-descriptors.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gollum-galore
  labels:
    name: gollum-galore
spec:
  ports:
  - name: http
    port: 80
  - name: https
    port: 443
  selector:
    app: gollum-galore
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: gollum-galore
spec:
  serviceName: gollum-galore
  replicas: 1
  template:
    metadata:
      labels:
        app: gollum-galore
    spec:
      containers:
      - name: gollum-galore
        image: schnatterer/gollum-galore:0.1.3
        ports:
        - containerPort: 80
          name: http
        volumeMounts:
        - name: gollum-galore-volume
          mountPath: /gollum
        - name: config
          mountPath: /gollum/config
        resources:
          requests:
            memory: 512M
        readinessProbe:
          # don't use http here, because all our resources are protected
          tcpSocket:
            port: 80
          # Wait for volume to get bound
          initialDelaySeconds: 20
          periodSeconds: 1
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 120
          periodSeconds: 10
      volumes:
      - name: gollum-galore-volume
        persistentVolumeClaim:
          claimName: gollum-gallore-persistent-storage-claim
      - name: config
        secret:
          secretName: config
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gollum-galore
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: gollum-galore
